Summary & Question Both Done

--- a/popup.html
+++ b/popup.html
@@ -6,10 +6,20 @@
 </head>
 <body>
     <h3>Text Extractor</h3>
+    <div id="events">NO EXISTING EVENTS</div>
     <button id="extractText">Extract Text & Summarize</button>
+    <button id="clearText">Clear!</button>
     <div id="summary">
         <strong>Summary will appear here...</strong>
     </div>
+    <div id="interactive">
+        <input type="text" id="question" placeholder="Ask Any question">
+        <button id="ask">Ask</button>
+        <div id="answer">
+            Ask question first!
+        </div>
+    </div>
+    
     <script src="popup.js"></script>
 </body>
 </html>
