Some fundamental Changes

--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Text Extractor</title>
+    <title>AssIssistant</title>
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <h3>Text Extractor</h3>
+    <h3>AssIssistant</h3>
     <div id="events">NO EXISTING EVENTS</div>
-    <button id="extractText">Extract Text & Summarize</button>
-    <button id="clearText">Clear!</button>
+    <div style="display: flex;">
+        <button id="extractText" style="width: 55%;margin-right: 5%;">Extract Text & Summarize</button>
+        <button id="clearText" style="width: 35%;">Clear!</button>
+    </div>
+    
     <div id="summary">
         <strong>Summary will appear here...</strong>
     </div>
