--- a/frontend/popup.html
+++ b/frontend/popup.html
@@ -14,13 +14,19 @@
     <div style="display: flex; margin-top: 1%;">
         <button id="extractText" style="width: 32%;margin-right: 2%;">Read Text & Summarize</button>
         <button id="ask" style="width: 32%;margin-right: 2%;">Ask</button>
-        <button id="clearText" style="width: 32%;">Clear!</button>
+        <button id="clearText" style="width: 32%;background-color: red;">Clear!</button>
         
     </div>
-    <div id="answer">
-        Ask question first!
+    <div>
+        <div id="heading">
+            First Start Conversation!
+        </div>
+        <div id="answer">
+            First Start Conversation!
+        </div>
+        <button id="addToReport">Add to Report</button>
     </div>
-
+    
     <script src="popup.js"></script>
 </body>
 </html>
