--- a/frontend/popup.html
+++ b/frontend/popup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AssIssistant</title>
+    <title>your buddy</title>
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <h3>AssIssistant</h3>
-    <div id="events">NO EXISTING EVENTS</div>
+    <h3>your buddy</h3>
+    <div id="events">No Existing Actions</div>
     <div id="interactive">
         <input type="text" id="question" placeholder="Ask Any question">
     </div>
@@ -18,9 +18,6 @@
         
     </div>
     <div>
-        <div id="heading">
-            First Start Conversation!
-        </div>
         <div id="answer">
             First Start Conversation!
         </div>
